@@ -4079,6 +4079,7 @@ html_engine_thaw (HTMLEngine *engine)
                    more conservative about the area to redraw.  This is gross.  */
 
 		html_engine_calc_size (engine);
+		html_draw_queue_clear (engine->draw_queue);
 		html_engine_draw (engine, 0, 0, engine->width, engine->height);
 	}
 }
